fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -142,6 +142,24 @@ p{
   font-size: 16px;
 }
 
+.description{
+  text-align: center;
+  font-family:"Helvetica", "Arial";
+  color:#495057;
+  font-size: 16px;
+  margin:20px;
+}
+
+a.app:link{
+  text-align:center;
+  font-family: "Helvetica","Arial";
+  color:#6C757D;
+}
+
+a.app:visited{
+  color:#212529;
+}
+
 .left{
   text-align:left;
   padding-left:20px;
